--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,34 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  min_messages: warning
   timeout: 5000
+  encoding: utf8
+  collation: utf8_general_ci
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: 'bcrypt_auth'
+  username: 'ismail'
+  password: 'password1'
+  host: "localhost"
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+staging:
+  <<: *default
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USER_NAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USER_NAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USER_NAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
